Pressing Esc in separate render result window does not focus main window #40065

Closed
opened 2014-05-07 12:56:39 +02:00 by Willi · 12 comments

System Information
Win7/64, AMD HD6850

Blender Version
all?

Short description of error
see subject

Exact steps for others to reproduce the error

  • Create new project
  • In the scene's render settings, Render section, change "Display" setting to "New window"
  • Render
  • After render is done, press Esc

Now you feel fooled - again and again - because you see the main Blender window, but pressing keys like wild doesn't do anything. This is because the hidden image editor still has the focus but it is in the background.

I expect pressing Esc focuses the main window.

Thanks once again!

**System Information** Win7/64, AMD HD6850 **Blender Version** all? **Short description of error** see subject **Exact steps for others to reproduce the error** - Create new project - In the scene's render settings, Render section, change "Display" setting to "New window" - Render - After render is done, press Esc Now you feel fooled - again and again - because you see the main Blender window, but pressing keys like wild doesn't do anything. This is because the hidden image editor still has the focus but it is in the background. I expect pressing Esc focuses the main window. Thanks once again!
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2

Added subscriber: @mont29

Added subscriber: @mont29

To be precise, once "escaped", the render window is invisible, and main Blender window does get most shortcuts etc.

However, the Render window remains active from desktop/system PoV (active in taskbar, gets system shortcuts like alt-F4, etc.).

To be precise, once "escaped", the render window is invisible, and main Blender window does get most shortcuts etc. However, the Render window remains active from desktop/system PoV (active in taskbar, gets system shortcuts like alt-F4, etc.).
Author

main Blender window does get most shortcuts etc.

In my test, it gets no shortcuts. All input is sent to the invisible render window. For example, [Num +], [Num -] resizes the image, even though the cursor is over the main window.

> main Blender window does get most shortcuts etc. In my test, it gets no shortcuts. All input is sent to the invisible render window. For example, [Num +], [Num -] resizes the image, even though the cursor is over the main window.

Eeeh… Well, here things like alt-A & co go to main window… Probably some differences in system/desktops…

But core issue is that render window remains “mostly” active anyway! :)

Eeeh… Well, here things like alt-A & co go to main window… Probably some differences in system/desktops… But core issue is that render window remains “mostly” active anyway! :)

Oh, just realized org report is under Windows, I’m under Linux!

Oh, just realized org report is under Windows, I’m under Linux!
Author

Maybe because Alt+A is a global shortcut? :) It even works before pressing Esc while the render window is still in the foreground. So, that Alt+A works doesn't mean the main window gets the shortcut, it's just independent from the current window - I guess.

I didn't test Linux, but I assumed it's very likely this can be a Windows-only issue.

Maybe because Alt+A is a global shortcut? :) It even works before pressing Esc while the render window is still in the foreground. So, that Alt+A works doesn't mean the main window gets the shortcut, it's just independent from the current window - I guess. I didn't test Linux, but I assumed it's very likely this can be a Windows-only issue.

Added subscriber: @kjym3

Added subscriber: @kjym3

This issue was referenced by fef9463123

This issue was referenced by fef946312380683489874923cd44790741157377

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit fef9463123.

Closed by commit fef9463123.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40065
No description provided.