intern/ghost/intern/GHOST_WindowWin32.cpp
@@ -646,8 +646,23 @@ GHOST_TSuccess GHOST_WindowWin32::setState(GHOST_TWindowState state)
 
 GHOST_TSuccess GHOST_WindowWin32::setOrder(GHOST_TWindowOrder order)
 {
-	HWND hWndInsertAfter = order == GHOST_kWindowOrderTop ? HWND_TOP : HWND_BOTTOM;
-	return ::SetWindowPos(m_hWnd, hWndInsertAfter, 0, 0, 0, 0, SWP_NOMOVE | SWP_NOSIZE) == TRUE ? GHOST_kSuccess : GHOST_kFailure;
+	HWND hWndInsertAfter, hWndToRaise;
+
+	if (order == GHOST_kWindowOrderBottom) {
+		hWndInsertAfter = HWND_BOTTOM;
+		hWndToRaise = ::GetWindow(m_hWnd, GW_HWNDNEXT); /* the window to raise */
+	}
+	else {
+		hWndInsertAfter = HWND_TOP;
+		hWndToRaise = NULL;
+	}
+	if (::SetWindowPos(m_hWnd, hWndInsertAfter, 0, 0, 0, 0, SWP_NOMOVE | SWP_NOSIZE) == FALSE) {
+		return GHOST_kFailure;
+	}
+	if (hWndToRaise && ::SetWindowPos(hWndToRaise, HWND_TOP, 0, 0, 0, 0, SWP_NOMOVE | SWP_NOSIZE) == FALSE) {
+		return GHOST_kFailure;
+	}
+	return GHOST_kSuccess;
 }
 
 
